--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,43 @@ body{
   width:300px;
   height:300px;
 }
+#search{
+  margin:40px 40px 0 40px;
+  padding-bottom:60px;
+  padding-top:40px;
+  text-align:center;
+  border-top: solid 2px #3f95c3;
+  background-color: aliceblue;
+}
+.search-criteria{
+  background-color: aliceblue;
+  margin:0 40px;
+  text-align:center;
+}
+
+/* https://www.w3schools.com/howto/howto_css_animated_search.asp */
+.mdb-select.md-form{
+  width: 200px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+  border: solid 2px #3f95c3;
+  border-radius: 5px;
+}
+
+.mdb-select.md-form:focus{
+  width: 100%;
+  border: solid 2px #3f95c3;
+}
+#button-container{
+  justify-content:center;
+  background-color: aliceblue;
+  margin: 0 40px;
+}
+button{
+  text-align:center;
+  width:200px;
+  margin:40px;
+}
 /*----footer----*/
 footer{
   border-top: solid 2px #3f95c3; 
