added table to list page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,3 +111,30 @@ div#map {
   margin:40px;
   border:solid 2px #3f95c3;
   }
+  /*----table----*/
+#myInput {
+  border: 1px solid #3f95c3;
+  margin: 12px 40px;
+  justify-content:center;
+}
+
+#myTable {
+  margin:40px;
+  border: 2px solid #3f95c3;
+  font-size: 18px;
+  justify-content:center;
+}
+
+#myTable th, #myTable td {
+  text-align: center;
+  padding: 12px;
+}
+
+#myTable tr {
+  border: 2px solid #ddd;
+}
+
+#myTable tr.header, #myTable tr:hover {
+  border: 2px solid #ddd;
+  background-color:   #3f95c3;
+}
