--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   border: 0;
 }
 /*----Navigation----*/
+/*source: https://codepen.io/pant0ne/pen/KRbGvy*/
 .navbar-dark{
 justify-content:center;
 }
@@ -31,7 +32,7 @@ color:#3f95c3;
   font-size: 1.5em;
   margin-left:30px;
 }
-/*source: https://codepen.io/pant0ne/pen/KRbGvy*/
+
 /*----body----*/
 body{
   font-family:'Cairo', sans-serif;
@@ -72,7 +73,6 @@ body{
   padding-bottom:20px;
   text-align:center;
 }
-
 .mdb-select.md-form{
   width: 100%;
   border: solid 2px #3f95c3;
@@ -93,7 +93,9 @@ button{
   width:200px;
   margin:40px;
 }
+
 /*----footer----*/
+
 footer{
   border-top: solid 2px #3f95c3; 
 }
@@ -105,13 +107,15 @@ footer img{
 .copyright p{
  text-align: end;
 }
+
 /*----map----*/
 div#map {
   min-height: 1000px;
   margin:40px;
   border:solid 2px #3f95c3;
   }
-  /*----table----*/
+
+/*----table----*/
 #myInput {
   border: 1px solid #3f95c3;
   margin: 12px 40px;
@@ -137,4 +141,58 @@ div#map {
 #myTable tr.header, #myTable tr:hover {
   border: 2px solid #ddd;
   background-color:   #3f95c3;
+}
+
+/*----Spinner ----*/
+/*source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_loader5----*/
+
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+#myTable {
+  display: none;
+  text-align: center;
 }
